src/objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>Charging_type__c</fullName>
        <label>Charging type</label>
        <picklist>
            <picklistValues>
                <fullName>Free</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>ROUND(End_date_time__c - Start_date_time__c,0)+1</formula>
        <label>Duration (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_date_time__c</fullName>
        <label>End date/time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Maximum_Volume__c</fullName>
        <label>Maximum Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Short_description__c</fullName>
        <label>Short description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_date_time__c</fullName>
        <label>Start date/time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planning</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Registrations Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registrations Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finished</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Twitter_User__c</fullName>
        <label>Twitter User</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_text__c</fullName>
        <label>Venue</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_date_time__c</columns>
        <columns>End_date_time__c</columns>
        <columns>Duration__c</columns>
        <columns>Venue_text__c</columns>
        <columns>Twitter_User__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>